--- a/src/index.html
+++ b/src/index.html
@@ -101,13 +101,13 @@
     </div>
     <div class="flex flex-col justify-center pl-24 mt-10 bg-gray-100">
         <div>
-            <h1 class="text-2xl font-bold">
+            <h1 class="text-4xl font-bold text-center">
                 Choose Your Plan
             </h1>
-            <p class="mt-5">Let's choose the package that is best for you and explore it happily and cheerfully.</p>
+            <p class="m-10 text-center">Let's choose the package that is best for you and explore it happily and cheerfully.</p>
         </div>
         <div class="flex flex-row space-x-10">
-            <div class="flex-1 w-64 flex-col border border-gray-500">
+            <div class="flex-1 w-64 flex-col justify-center border border-gray-500">
                 <div> 
                     <img src="images/Free.svg">
                     <h1 class="font-bold pl-8 mt-5">Free plan</h1>
@@ -143,11 +143,11 @@
                 </div>
                 <div class="flex flex-col  mt-24">
                     <h1 class="font-bold">$9/mo</h1>
-                    <button class="text-red-500 border-2 border-red-500 rounded-md">
+                    <button class="text-red-500 font-bold border-4 border-red-500 rounded-lg">
                        Select
                 </div>
             </div>
-            <div  class="flex-1 w-64 flex-col items-center border border-red-500 ">
+            <div  class="flex-1 w-64 flex-col justify-center border border-red-500 ">
                 <div>
                     <img src="images/Premium.png">
                     <h1 class="font-bold pl-8 mt-5">Premium plan</h1>
@@ -169,23 +169,23 @@
         </div>
 
     </div>
-    <div class="flex flex-col items-center" >
-        <h1>Huge Global Network of Fast VPN</h1>
-        <p>See LaslesVPN everywhere to make it easier for you when you move locations.</p>
+    <div class="flex flex-col items-center mt-24" >
+        <h1 class="text-4xl font-bold">Huge Global Network<br> of Fast VPN</h1>
+        <p class="m-5">See LaslesVPN everywhere to make it easier for you when you move<br> locations.</p>
     
     <div class="flex flex-row items-center">
         <img src="images/Huge Global.svg">
     </div>
-    <div>
+    <div clas="m-10">
         <img src="images/Sponsored.svg">
     </div>
 </div>
-    <div>
-        <h1>Trusted by Thousands of Happy Customer</h1>
-        <p>These are the stories of our customers who have joined us with great pleasure when using this crazy feature.</p>
+    <div >
+        <h1 class="text-4xl font-bold text-center m-10 ">Trusted by Thousands of Happy Customer</h1>
+        <p class="text-center mt-5 ">These are the stories of our customers who have joined us with great<br> pleasure when using this crazy feature.</p>
     </div>
     <div class="flex flex-row mt-5 py-5 items-center justify-center space-x-5" >
-        <div class=" flex-1 w-64 p-3 border-2 border-gray-500">
+        <div class=" flex-1  border-2 border-gray-500">
             <div class="flex flex-col">
             <div class="flex flex-row space-x-8">
             <img src="images/Ellipse 175 (1).svg">
@@ -199,7 +199,7 @@
         </div>
         </div>
 
-        <div class="flex-1  w-64 p-3 border-2 border-gray-500 ">
+        <div class="flex-1   border-2 border-gray-500 ">
             <div class="flex flex-col">
             <div class="flex flex-row space-x-8">
                 <img src="images/Ellipse 175 (1).svg">
@@ -213,7 +213,7 @@
    
 </div>
 </div>
-        <div class="flex-1  w-64 p-3 border-2 border-gray-500 ">
+        <div class="flex-1   border-2 border-gray-500 ">
             <div class="flex flex-col">
             <div class="flex flex-row">
                 <img src="images/Ellipse 175 (1).svg">
@@ -256,13 +256,13 @@
         
         </div>
     </div>
-    <div class="flex flex-row items-center space-around">
+    <div class="flex flex-row justify-around space-around m-20">
         <div class="flex flex-col">
-            <h1 class="text-4xl font-bold">Subscribe Now for Get Special Features!</h1>
+            <h1 class="text-4xl font-bold">Subscribe Now for <br>Get Special Features!</h1>
             <p>Let's subscribe with us and find the fun.</p>
         </div>
         <div>
-            <button class="p-7 w-64 border-2 text-white bg-red-700 rounded-md">Get Started</button>
+            <button class="p-5 w-64 border-2 text-white bg-red-700 rounded-lg">Get Started</button>
         </div>
     </div>
     <div class="flex flex-row mt-10 justify-center space-x-8">
